tests/NormalTests/paczka1/fuzzy1/36358213.err
Error in line 1: S3 S431 74,9
Error in line 2: S3 S3 24,5
Error in line 6: S3 S3 119,8
Error in line 11: M4ErZ7sQ S3 33,6
Error in line 20: S3 A628 86,5
Error in line 23: S3 A628 251,7
Error in line 21: eYYhT S3 40,0
Error in line 25: gVZSc8 S3 30,5
Error in line 28: gVZSc8 A907 57,6
Error in line 39: eYYhT S431 32,7
